Added mobile styling to StationInformationDialog

--- a/src/Dialogs/ConnectionCard.scss
+++ b/src/Dialogs/ConnectionCard.scss
@@ -1,6 +1,7 @@
 .connection-card {
   display: flex;
   align-items: center;
+  justify-content: space-around;
   .connection-icon-container {
     display: flex;
     flex-direction: column;
