Added user login/logout. Added favorite button to dialog header

--- a/src/Dialogs/StationInformationDialog.scss
+++ b/src/Dialogs/StationInformationDialog.scss
@@ -36,3 +36,19 @@
     }
   }
 }
+
+.fab {
+  &.fab-nonfavorite-station {
+    background-color: white;
+    color: #455a64;
+    margin-left: 1rem;
+  }
+  &.fab-favorite-station {
+    background-color: #ef5350;
+    color: white;
+    margin-left: 1rem;
+    &:hover {
+      background-color: #d32f2f;
+    }
+  }
+}
