--- a/src/Dialogs/StationInformation/StationInformationDialog.scss
+++ b/src/Dialogs/StationInformation/StationInformationDialog.scss
@@ -2,6 +2,7 @@
   min-width: 400px;
   @media (max-width: 500px) {
     width: 100%;
+    min-width: 100%;
   }
   #navigate-button {
     margin-top: 1rem;
